# ChessOpeningIntelligence

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  Makefile  OII_DEVELOPMENT_PLAN.md  README.md  README_ES.md  math_logic_notes.md  oii_math_review.md  pyproject.toml
pipeline/: __init__.py  config.py  logger.py  run_pipeline.py  validators.py
sql/: README.md  macros.sql  metrics.sql  schema.sql  views.sql
tests/: conftest.py
tests/integration/: __init__.py  test_load_duckdb.py
tests/sql/: __init__.py  test_macros.py  test_views.py
tests/unit/: __init__.py  test_config.py  test_validators.py
